--- a/src/views/template/header.ejs
+++ b/src/views/template/header.ejs
@@ -102,6 +102,12 @@
                   <p>Clientes</p>
                 </a>
               </li>
+              <li class="nav-item">
+                <a href="/Temp" class="nav-link">
+                  <i class="nav-icon fas fa-comments"></i>
+                  <p>Chats No Ver/Ver</p>
+                </a>
+              </li>
               <li class="nav-header">CONFIGURACIONES DEL BOT</li>
               <li class="nav-item">
                 <a href="/Responses" class="nav-link">
