--- a/src/views/template/header.ejs
+++ b/src/views/template/header.ejs
@@ -105,7 +105,7 @@
               <li class="nav-item">
                 <a href="/Temp" class="nav-link">
                   <i class="nav-icon fas fa-comments"></i>
-                  <p>Chats No Ver/Ver</p>
+                  <p>Ventas no realizadas</p>
                 </a>
               </li>
               <li class="nav-header">CONFIGURACIONES DEL BOT</li>
