--- a/src/views/template/footer.ejs
+++ b/src/views/template/footer.ejs
@@ -10,7 +10,7 @@
 </div>
 
 
-<div class="modal fade" id="modal-xl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+<div class="modal fade" id="modal-xl" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
     data-backdrop="static">
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
