--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -96,7 +96,7 @@
                                     <button id="cancel_btn_resume" onclick="window.location.href='/'"
                                         class="btn btn-danger">Cancelar cierre
                                         del
-                                        diá.</button>
+                                        día.</button>
                                     <br>
                                     <small class="text-danger">*Atención dentro de este apartado recibirás mensajes de
                                         los chats que están en pantalla, pero más no podrás responderlos, hasta que
