--- a/src/views/temp.ejs
+++ b/src/views/temp.ejs
@@ -38,7 +38,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <% temps.forEach(temp=> { if(temp.TempStatus==0){%>
+                                        <% temps.forEach(temp=> { %>
                                             <tr>
                                                 <td>
                                                     <%=temp.TempId%>
@@ -56,7 +56,7 @@
                                                     <%=temp.TempReason%>
                                                 </td>
                                             </tr>
-                                            <% }}); %>
+                                            <% }); %>
                                     </tbody>
                                     <tfoot>
                                         <tr>
