--- a/src/views/template/footer.ejs
+++ b/src/views/template/footer.ejs
@@ -59,7 +59,7 @@
         <script src="/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
         <script src="/plugins/datatables-buttons/js/buttons.print.min.js"></script>
         <script src="/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-        <script src="/dist/js/core.js" defer></script>
+        <script src="/dist/js/core.min.js" defer></script>
         </body>
 
 
